--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "detox",
+  "version": "8.0.0",
+  "main": "./detox/src/index.js",
   "scripts": {
     "test:e2e:ios": "pushd detox/test && npm run e2e:ios && popd",
     "test:e2e:android": "pushd detox/test && npm run e2e:android && popd",
